[gd_scene load_steps=30 format=2]

[ext_resource path="res://src/Actors/Player.gd" type="Script" id=1]
[ext_resource path="res://assets/art/player/robot_demo.png" type="Texture" id=2]
[ext_resource path="res://assets/audio/Cokeboy Sound Fx/Landung.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/audio/Cokeboy Sound Fx/Sprung.wav" type="AudioStream" id=4]
[ext_resource path="res://assets/audio/sfx/running.wav" type="AudioStream" id=5]
[ext_resource path="res://src/Main/Shockwave.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/audio/Cokeboy Sound Fx/Wilhelm Scream final.wav" type="AudioStream" id=7]

[sub_resource type="Animation" id=1]
length = 0.01
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 22 ]
}

[sub_resource type="Animation" id=2]
resource_name = "die"
length = 1.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 17, 18, 19, 20 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/keys = {
"times": PoolRealArray( 0, 1.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.2 ),
"transitions": PoolRealArray( 2.15792e-05, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ) ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = false
tracks/3/keys = {
"times": PoolRealArray( 1.2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "informLevelOfDeath"
} ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Sprite:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = false
tracks/4/keys = {
"times": PoolRealArray( 0, 1.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 2, 2 ) ]
}
tracks/5/type = "audio"
tracks/5/path = NodePath("Animation Audio")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 7 )
} ],
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=3]
length = 0.01
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 21 ]
}

[sub_resource type="Animation" id=4]
length = 0.5
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 26 ]
}

[sub_resource type="Animation" id=5]
length = 7.0
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.25, 1.5, 2, 4.5, 4.75, 5, 5.25 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 16, 17, 18, 16, 19, 20, 19, 16 ]
}

[sub_resource type="Animation" id=6]
length = 0.5
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 25 ]
}

[sub_resource type="Animation" id=7]
length = 0.5
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 23, 24, 23 ]
}

[sub_resource type="Animation" id=8]
length = 0.5
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 26 ]
}

[sub_resource type="Animation" id=9]
length = 1.25
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75, 1, 1.25 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 0 ]
}
tracks/1/type = "audio"
tracks/1/path = NodePath("Animation Audio")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"clips": [ {
"end_offset": 0.694539,
"start_offset": 0.0,
"stream": ExtResource( 5 )
} ],
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=10]
length = 1.25
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75, 1, 1.25 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 5, 6, 7, 8, 9, 5 ]
}

[sub_resource type="Animation" id=11]
resource_name = "spawn"
length = 1.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 20, 19, 17, 18 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/keys = {
"times": PoolRealArray( 0, 1.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 360.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 1.2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "setIdleState"
} ]
}

[sub_resource type="Animation" id=12]
length = 1.25
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75, 1, 1.25 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 10, 11, 12, 13, 14, 5 ]
}

[sub_resource type="CapsuleShape2D" id=13]
radius = 7.5
height = 12.5

[sub_resource type="Gradient" id=14]
colors = PoolColorArray( 1, 1, 1, 1, 0.157715, 0.157715, 0.157715, 1 )

[sub_resource type="GradientTexture" id=15]
gradient = SubResource( 14 )

[sub_resource type="ParticlesMaterial" id=16]
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
spread = 26.02
gravity = Vector3( 0, 50, 0 )
initial_velocity = 28.79
angular_velocity = 482.77
angular_velocity_random = 0.2
orbit_velocity = 0.0
orbit_velocity_random = 0.0
damping = 4.62
damping_random = 0.1
scale = 3.0
scale_random = 0.51
color_ramp = SubResource( 15 )

[sub_resource type="Curve" id=17]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.984894, 0 ), -0.0313447, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=18]
width = 32
curve = SubResource( 17 )

[sub_resource type="ParticlesMaterial" id=19]
trail_divisor = 2
trail_size_modifier = SubResource( 18 )
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
flatness = 0.76
gravity = Vector3( 0, 20, 0 )
initial_velocity = 23.32
initial_velocity_random = 0.41
angular_velocity = 482.77
angular_velocity_random = 0.88
orbit_velocity = 0.0
orbit_velocity_random = 0.0
damping = 4.62
damping_random = 0.1
angle = 158.2
scale = 3.0
scale_random = 0.51
color_ramp = SubResource( 15 )

[sub_resource type="CircleShape2D" id=20]
radius = 66.2709

[sub_resource type="Shader" id=21]
code = "shader_type canvas_item;
uniform bool only_red;
uniform bool only_green;
uniform bool only_blue;

uniform float lightHeight;
uniform vec2 lightVEC;
uniform vec2 shadowVEC;
uniform vec3 normal;
void fragment() {
	vec4 tex_color = texture(TEXTURE, UV);
	
	if(only_red)
	{
		COLOR= vec4(tex_color.r, 0, 0, tex_color.a);
	}
	else if(only_green)
	{
		COLOR= vec4(0, tex_color.g, 0, tex_color.a);
	}
		else if(only_blue)
	{
		COLOR= vec4(0, 0, tex_color.b, tex_color.a);
	}
	else
	{
		COLOR = tex_color;
	}
}
"

[sub_resource type="ShaderMaterial" id=22]
shader = SubResource( 21 )
shader_param/only_red = false
shader_param/only_green = false
shader_param/only_blue = false
shader_param/lightHeight = 100.0
shader_param/lightVEC = null
shader_param/shadowVEC = null
shader_param/normal = Vector3( 1, 1, 1 )

[node name="Player" type="KinematicBody2D" groups=[
"Player",
]]
collision_mask = 30
script = ExtResource( 1 )
sprintIncrease = 1.5
acceleration = 100
shockwave = ExtResource( 6 )

[node name="PlatformDetector" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 3 )
collision_mask = 16

[node name="WallDetectorLeft" type="RayCast2D" parent="."]
position = Vector2( -5, -15 )
enabled = true
cast_to = Vector2( -6, 0 )
collision_mask = 2147483664
collide_with_areas = true

[node name="WallDetectorRight" type="RayCast2D" parent="."]
position = Vector2( 5, -15 )
enabled = true
cast_to = Vector2( 6, 0 )
collision_mask = 16

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_speed = 2.6
anims/crouch = SubResource( 1 )
anims/die = SubResource( 2 )
anims/falling = SubResource( 3 )
anims/falling_weapon = SubResource( 4 )
anims/idle = SubResource( 5 )
anims/idle_weapon = SubResource( 6 )
anims/jumping = SubResource( 7 )
anims/jumping_weapon = SubResource( 8 )
anims/run = SubResource( 9 )
anims/run_weapon = SubResource( 10 )
anims/spawn = SubResource( 11 )
anims/standing_weapon_ready = SubResource( 12 )

[node name="Camera" type="Camera2D" parent="."]
light_mask = 0
position = Vector2( 0, -28 )
process_mode = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
light_mask = 0
position = Vector2( 0, -13.5 )
shape = SubResource( 13 )

[node name="Trail" type="Particles2D" parent="."]
emitting = false
amount = 50
explosiveness = 0.24
randomness = 0.43
local_coords = false
draw_order = 1
process_material = SubResource( 16 )

[node name="Puff" type="Particles2D" parent="."]
emitting = false
amount = 20
one_shot = true
explosiveness = 1.0
local_coords = false
draw_order = 1
process_material = SubResource( 19 )

[node name="LandingAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
bus = "SFX"

[node name="JumpAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
bus = "SFX"

[node name="Animation Audio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -13.157
bus = "SFX"

[node name="TrapSensingArea" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 2

[node name="TrapSensingCollision" type="CollisionShape2D" parent="TrapSensingArea"]
visible = false
position = Vector2( 0, -14 )
shape = SubResource( 20 )

[node name="Tween" type="Tween" parent="."]

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0 )
show_behind_parent = true
light_mask = -2147483647
material = SubResource( 22 )
position = Vector2( 0, -14 )
rotation = 6.28319
z_index = 1
texture = ExtResource( 2 )
vframes = 2
hframes = 16
frame = 20
